# esphome-snapspot

components/priority_lock/: CMakeLists.txt  __init__.py  priority_lock.cpp  priority_lock.h
components/shared_audio/: CMakeLists.txt  SharedAudioEQ.cpp  SharedAudioEQ.h  __init__.py  graphic_eq.h  shared_audio_eq.cpp  shared_audio_eq.h
components/snapclient/: __init__.py
components/snapclient/media_player/: CMakeLists.txt  __init__.py  esphome_snapclient.h  idf_component.yml  player.h  snapclient_stub.c
components/snapspot/: CMakeLists.txt  __init__.py  audio_decoder.h  audio_output.h  audio_source_manager.h  graphic_eq.h  snapcast_client.h  snapspot_component.h  snapspot_stub.c  spotify_client.h
components/spotify_connect/: __init__.py
components/spotify_connect/media_player/: BellLogger.h  CMakeLists.txt  CSpotContext.h  CircularBuffer.h  LoginBlob.h  SpircHandler.h  TrackPlayer.h  __init__.py  esphome_audio_sink.h  esphome_spotify_connect.h  spotify_connect_stub.c
